--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Search Images by Name</h1>
-    <form class="form" id="form">
+    <form class="form" id="form" autocomplete="off">
         <input type="text" id="input" placeholder="Search Here .....">
         <button>Search</button>
     </form>
